# hate-speech-detection

./: .gitignore  01_experiment_log_viewer.ipynb  02_pseudo_label_viewer.ipynb  03_exp_scores.ipynb  04_dataset_recover.ipynb  20221025_huggingface_tutorial.ipynb  20221025_recovered_dataset_eda.ipynb  20221026_output_eda.ipynb  20221026_recovered_dataset_eda.ipynb  20221027_nnmodule_tutorial.ipynb  20221028_torch_model_paremeter.ipynb  20221029_tutorial_callback.ipynb  20221031_parameter_mean.ipynb  20221031_result_analysis.ipynb  20221103_plotly-seed_volatility_analysis.ipynb  20221103_seed_volatility_analysis.ipynb  20221105_attention_tutorial.ipynb  20221105_post_analysis.ipynb  20221111_seed_emsemble.ipynb  README.md  _bert_corpus_prediction.ipynb  _debug_pretrained.ipynb  _experiment_log_viewer.ipynb  _lgb_output_translator.ipynb  _python_memo_hate-speech-detection.ipynb  _refactor_train_and_test.ipynb  _sentence_bert_embs.ipynb  _test_pseudo_label.ipynb  _tmp.ipynb  _train_with_recovered_dataset.ipynb  _ttmp.ipynb  adversarial_validator.py  adversarial_validator.sh  bert_baseline.ipynb  bert_baseline_test_.ipynb  bert_baseline_train.ipynb  bert_restart_train.py  bert_restart_train.sh  bert_run_notebook_test.ipynb  bert_run_notebook_train.ipynb  (+28 more)
experiment/: experiment_log.csv
notes/: 20221025_gpu_memory_usage.py  20221025_huggingface_tutorial.ipynb  20221025_train_with_original_text.ipynb  20221026_automodel_tutorial.ipynb  20221027_nnmodule_tutorial.ipynb  20221028_torch_model_paremeter.ipynb  20221029_tutorial_scheduler.ipynb  20221031_parameter_mean.ipynb  20221101_sigmoid_softmax.ipynb  20221102_fine-tune-header_implement.ipynb  _bow_svd_exp.ipynb  _refactor_train_and_test_01.ipynb  _refactor_train_and_test_02.ipynb  huggingface_memo.md  multiprocess.ipynb  parallel_func.ipynb  reproduction_test.ipynb
test/: .gitignore
