[tool.poetry]
name = "hate-speech-detection"
version = "0.1.0"
description = ""
authors = ["guccisan <yamskymtb0903@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
