[tool.poetry]
name = "hate-speech-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hate_speech_detection"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.0"
lightgbm = "3.3.2"
jupyter = "1.0.0"
transformers = "4.22.2"
mecab = "0.996.3"
mecab-python = "1.0.0"
matplotlib = "3.6.0"
tomli = "2.0.1"
seaborn = "0.12.0"
plotly = "5.10.0"
demoji = "1.1.0"
mojimoji = "0.0.12"
neologdn = "0.5.1"
sklearn = "0.0"
fugashi = "1.2.0"
colorama = "0.4.5"
pyarrow = "9.0.0"
pandarallel = "1.6.3"
sentencepiece = "0.1.97"
protobuf = "3.20.0"
pyknp = "0.6.1"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp39-cp39-linux_x86_64.whl"}
sentence-transformers = "2.2.2"
gputil = "1.4.0"
torchsummary = "1.5.1"
torch-summary = "1.4.5"
torchinfo = "1.7.1"
timm = "0.5.4"
kaleido = "0.2.1"
black = "22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
